create session history, and fix generator widget

--- a/templates/core/dashboard.html
+++ b/templates/core/dashboard.html
@@ -296,6 +296,11 @@
                                 <i class="fas fa-code me-2"></i>Widget Generator
                             </a>
                         </div>
+                        <div class="col-md-3">
+                            <a href="{% url 'session_history' %}" class="btn btn-outline-dark w-100">
+                                <i class="fas fa-history me-2"></i>Session History
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
